--- a/src/Components/Banner/Banner.css
+++ b/src/Components/Banner/Banner.css
@@ -1,21 +1,22 @@
-.banner{
+.banner {
     background-size: cover;
     height: 700px;
     color: white;
 }
 
-.content{
+.content {
     padding-top: 140px;
     height: 190px;
     padding-left: 15px;
 }
 
-.title{
+.title {
     font-size: 3rem;
     font-weight: 800;
     padding-bottom: 0.3rem;
 }
-.button{
+
+.button {
     color: white;
     outline: none;
     border: none;
@@ -30,12 +31,12 @@
     margin-right: 1rem;
 }
 
-.button:hover{
+.button:hover {
     color: black;
     background-color: #e6e6e6;
 }
 
-.description{
+.description {
     width: 45rem;
     line-height: 1.3;
     padding-top: 1rem;
@@ -45,7 +46,7 @@
 
 }
 
-.fade_bottom{
+.fade_bottom {
     height: 370px;
-    background-image: linear-gradient(180deg,transparent,rgba(37,37,37,.61),#111);
+    background-image: linear-gradient(180deg, transparent, rgba(37, 37, 37, .61), #111);
 }
